@@ -42,12 +42,12 @@ DO_MK += quagga
 DO_MK += iputils
 DO_MK += pcmcia-cs
 DO_MK += hostap
+DO_MK += madwifi
 DO_MK += hostapd
 DO_MK += ppp
 DO_MK += rp-pppoe
 DO_MK += rp-l2tp
 DO_MK += wireless_tools
-DO_MK += madwifi
 DO_MK += fwdg
 DO_MK += bridge
 DO_MK += postgresql
