@@ -1,0 +1,1 @@
+d5113247dc6ee17106e6bc7cb89aa507  hostapd-0.5.7.tar.gz
