@@ -20,8 +20,8 @@
 # $Id$
 
 PKG := hostapd
-SRC_FILENAME = hostapd-0.4.8.tar.gz
-EXTRACTED_DIR = hostapd-0.4.8
+SRC_FILENAME = hostapd-0.5.7.tar.gz
+EXTRACTED_DIR = hostapd-0.5.7
 DOWNLOAD_SITES = http://hostap.epitest.fi/releases/ \
 		$(CFLINUX_PACKAGES)
 PATCHES =
@@ -32,10 +32,10 @@ include $(TOP_DIR)/packages.mk
 configure: patch $(CONFIGURED_STAMP)
 
 $(CONFIGURED_STAMP):
-	perl -ne 's/^#(?=(CONFIG_(RADIUS_SERVER)))//;' \
-		-e 's/^(?=(CONFIG_(IAPP|RSN|EAP|PKCS12|IPV6)))/#/;' \
+	perl -ne 's/^#(?=(CONFIG_(RADIUS_SERVER)|CONFIG_DRIVER_MADWIFI))//;' \
+		-e 's/^(?=(CONFIG_(IAPP|RSN|IPV6)))/#/;' \
+		-e 's/^#CFLAGS.*$$/CFLAGS += -I..\/madwifi/;' \
 		-e 'print;' $(PKG_ROOT)/defconfig > $(PKG_ROOT)/.config
-#		-e 's/^#CFLAGS.*$$/CFLAGS += -I..\/madwifi/;'
 	touch $(CONFIGURED_STAMP)
 
 clean:
