@@ -3,6 +3,7 @@ Changes from 1.0p6 to 1.0p7:
 	- upgraded grsec to 2.1.10
 	- upgraded madwifi to svn rev 2143, and added wlan_wep.o into
 	  cflinux
+	- upgraded hostap and hostapd; enabled eap and support for madwifi
 
 Changes from 1.0p5 to 1.0p6:
 	- upgraded write_helper:
